--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,15 +20,14 @@
       <span [routerLink]="['/']" class="cursor-pointer" [style.textTransform]="'capitalize'">
         Covalent
       </span>
-
       <button mat-button [matMenuTriggerFor]="verMenu">
-        {{ '3.0.0' }}
+        {{ version }}
         <mat-icon>arrow_drop_down</mat-icon>
       </button>
       <mat-menu #verMenu="matMenu">
-        <a mat-menu-item href="https://kriswinbush.github.io/covalent/latest">3.0.0</a>
-        <a mat-menu-item href="https://kriswinbush.github.io/covalent/v2.1.x">2.1.x</a>
-        <a mat-menu-item href="https://kriswinbush.github.io/covalent/v1.0.x">1.0.x</a>
+        <a mat-menu-item href="https://kriswinbush.github.io/covalent/v1.0.x">1.0.1</a>
+        <a mat-menu-item href="https://kriswinbush.github.io/covalent/v2.1.1">2.1.1</a>
+        <a mat-menu-item href="https://kriswinbush.github.io/covalent/latest">{{ version }}</a>
       </mat-menu>
       <td-toolbar flex layout="row"></td-toolbar>
     </div>
