feat(menu): update menu and scripts for demo

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -9,8 +9,7 @@
   </button>
   <mat-menu #verMenu="matMenu">
     <a mat-menu-item href="https://kriswinbush.github.io/covalent/v1.0.x">1.0.1</a>
-    <a mat-menu-item href="https://kriswinbush.github.io/covalent/v2.1.x">2.1.x</a>
-    <a mat-menu-item href="https://kriswinbush.github.io/covalent/latest">3.0.0</a>
+    <a mat-menu-item href="https://kriswinbush.github.io/covalent/latest">2.1.x</a>
   </mat-menu>
     <span flex></span>
     <nav hide-xs hide-sm class="text-upper text-sm docs-nav" layout="row">
